--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
         <div class="text-content">
             <h1>I'm Mubashir</h1>
             <div class="text-animation">
-                <h2>Student , Developer ,Coder</h2>
+                <h2>Student , Developer & Cracker</h2>
             </div>
-    <p>HELLO WELOCME TO MY PROFILE . I AM STUDENT , CRACKER , WEB DEVELOPER  ,APP MODDER . I ALSO HAVE MANY SKILLS WHICH WILL BE VISSIBLE BELOW . THANKS FOR VISITING MY PORTFOLIO.</p>
+    <p>HELLO WELOCME TO MY PROFILE . I AM A STUDENT , CRACKER , WEB DEVELOPER  ,APP MODDER . I ALSO HAVE MANY SKILLS WHICH WILL BE VISSIBLE BELOW . THANKS FOR VISITING MY PROFILE .</p>
             <div class="btn-section">
                 <button class="btn">Hire me</button>
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' style="--vlr:7"></i>
+        <i class='bx bxl-twitter' style="--vlr:7">https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09</i>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
-        <i class='bx bxl-youtube' style="--vlr:9"></i>
+        <i class='bx bxl-youtube' style="--vlr:9">https://youtube.com/@mubashirbhat2286?si=XsfGMiOBWUiZMKbF</i>
             </div>
         </div>
-        <img src="main.jpg" alt="">
+        <img src="main.jpg" alt="https://i.postimg.cc/MT3mmytn/Picsart-24-08-07-09-34-36-520.jpg">
     </section>
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
         <h2 class="title">About <span>Me</span></h2>
-        <img src="main.jpg" alt="" class="aboutImg">
+        <img src="main.jpg" alt="https://i.postimg.cc/MT3mmytn/Picsart-24-08-07-09-34-36-520.jpg" class="aboutImg">
         <div class="text-content2">
-            <h2>Frontend Developer</h2>
-    <p>I AM CRACKER, WEB DEVELOPER  ,APP MODDER . APART FROM THIS I AM A STUDENT AND CURRENTY STUDING .
+            <h2>MUBII</h2>
+    <p>I AM CRACKER, WEB DEVELOPER  ,APP MODDER . APART FROM THIS I AM A STUDENT AND CURRENTY STUDYING .
     .</p>
             <button class="btn">Read More</button>
         </div>
@@ -77,7 +77,7 @@
                     <div class="education-content">
     <div class="content">
         <div class="year">2023-24 <i class='bx bxs-calendar'></i></div>
-        <h3>currently in College</h3>
+        <h3>currently preparing for neet 🤧</h3>
         <p></p>
     </div>
                     </div>
@@ -89,8 +89,8 @@
                     <div class="education-content">
     <div class="content">
         <div class="year">2024<i class='bx bxs-calendar'></i></div>
-        <h3>TELEGRAM CHANNEL</h3>
-        <p>I HAVE A TELEGRAM CHANNEL</p>
+        <h3>I'M FROM </h3>
+        <p>SOPORE KASHMIR 🗾</p>
     </div>
 </div>
                 
@@ -113,7 +113,7 @@
                 <h3 class="skill-title">PERSONAL </h3>
                 <div class="skill-box skill-box1">
                     <div class="single-skill">
-                        <span class="topic">HTML</span>
+                        <span class="topic">CODING</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
@@ -139,21 +139,21 @@
                 <h3 class="skill-title">OTHER</h3>
                 <div class="skill-box skill-box2">
                     <div class="single-skill">
-                        <span class="topic">FILE MAKER</span>
+                        <span class="topic">CRACKING</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-1"></div>
                     </div>
                     <div class="single-skill">
-                        <span class="topic">CARDER</span>
+                        <span class="topic"MODDING</span>
                         <span class="topic">80%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-2"></div>
                     </div>
                 <div class="single-skill">
-                    <span class="topic">GAMER</span>
+                    <span class="topic">STUDYING</span>
                     <span class="topic">70%</span>
                 </div>
                     <div class="bar-side">
