--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' style="--vlr:7">https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09</i>
+        <i class='bx bxl-twitter' style="--vlr:7"></i>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
-        <i class='bx bxl-youtube' style="--vlr:9">https://youtube.com/@mubashirbhat2286?si=XsfGMiOBWUiZMKbF</i>
+        <i class='bx bxl-youtube' style="--vlr:9"></i>
             </div>
         </div>
-        <img src="main.jpg" alt="https://i.postimg.cc/MT3mmytn/Picsart-24-08-07-09-34-36-520.jpg">
+        <img src="https://i.postimg.cc/MT3mmytn/Picsart-24-08-07-09-34-36-520.jpg" alt="">
     </section>
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
         <h2 class="title">About <span>Me</span></h2>
-        <img src="main.jpg" alt="https://i.postimg.cc/MT3mmytn/Picsart-24-08-07-09-34-36-520.jpg" class="aboutImg">
+        <img src="main.jpg" alt="">
         <div class="text-content2">
             <h2>MUBII</h2>
     <p>I AM CRACKER, WEB DEVELOPER  ,APP MODDER . APART FROM THIS I AM A STUDENT AND CURRENTY STUDYING .
