--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
     <!-- *************************Home Section************************* -->
     <section class="home"  id="home">
         <div class="text-content">
-            <h1>I'm Mubashir</h1>
+            <h1>I'm</h1>
             <div class="text-animation">
                 <h2>Student , Developer & Cracker</h2>
             </div>
-    <p>HELLO WELOCME TO MY PROFILE . I AM A STUDENT , CRACKER , WEB DEVELOPER  ,APP MODDER . I ALSO HAVE MANY SKILLS WHICH WILL BE VISSIBLE BELOW . THANKS FOR VISITING MY PROFILE .</p>
+    <p>HELLO WELCOME TO MY PROFILE . I AM A STUDENT , CRACKER , WEB DEVELOPER  , APP MODDER . I ALSO HAVE MANY SKILLS WHICH WILL BE VISIBLE BELOW . THANKS FOR VISITING MY PROFILE ❤️ .</p>
             <div class="btn-section">
                 <button class="btn">Hire me</button>
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' style="--vlr:7"></i>
+        <i class='bx bxl-twitter' style="https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09"></i>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
-        <i class='bx bxl-youtube' style="--vlr:9"></i>
+        <i class='bx bxl-youtube' style="https://youtube.com/@mubashirbhat2286?si=XsfGMiOBWUiZMKbF></i>
             </div>
         </div>
-        <img src="https://i.postimg.cc/MT3mmytn/Picsart-24-08-07-09-34-36-520.jpg" alt="">
+        <img src="https://i.postimg.cc/s21WRKWK/Snapchat-1606068077.jpg" alt="">
     </section>
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
         <h2 class="title">About <span>Me</span></h2>
-        <img src="main.jpg" alt="">
+        <img src="https://i.postimg.cc/s21WRKWK/Snapchat-1606068077.jpg" alt="">
         <div class="text-content2">
             <h2>MUBII</h2>
     <p>I AM CRACKER, WEB DEVELOPER  ,APP MODDER . APART FROM THIS I AM A STUDENT AND CURRENTY STUDYING .
@@ -62,15 +62,15 @@
                 <div class="box">
                     <div class="education-content">
                         <div class="content">
-    <div class="year">2021-22<i class='bx bxs-calendar'></i></div>
+    <div class="year">2020-21<i class='bx bxs-calendar'></i></div>
     <h3>MATRICULATION</h3>
     <p>I HAVE COMPLETED MY 10TH STANDARD WITH 100 PERCENCT MARKS 💀. </p>
                         </div>
                     </div>
                     <div class="education-content">
                         <div class="content">
-        <div class="year">2022-23 <i class='bx bxs-calendar'></i></div>
-                            <h3>SENIOR SECENDARY</h3>
+        <div class="year">2023-24 <i class='bx bxs-calendar'></i></div>
+                            <h3>SENIOR SECONDARY</h3>
     <p>I HAVE SUCCESSFULLY COMPLETED MY 12TH EXAMINATION WITH FLYING COLORS</p>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                 <div class="box">
                     <div class="education-content">
     <div class="content">
-        <div class="year">2024<i class='bx bxs-calendar'></i></div>
+        <div class="year">📍<i class='bx bxs-calendar'></i></div>
         <h3>I'M FROM </h3>
         <p>SOPORE KASHMIR 🗾</p>
     </div>
@@ -96,7 +96,7 @@
                 
                     <div class="education-content">
                         <div class="content">
-                <div class="year">2021-22 <i class='bx bxs-calendar'></i></div>
+                <div class="year">2000-2030 <i class='bx bxs-calendar'></i></div>
                             <h3>COMIMG SOON</h3>
         <p </p>
                         </div>
@@ -182,11 +182,11 @@
     </section>
     <footer>
         <div class="text">
-            <p>Copyright @ 2024 by MUBASHIR</p>
+            <p>Copyright 2025 by @Mubii</p>
         </div>
        <a href="#"> <i class='bx bx-up-arrow-alt'></i></a>
     </footer>
     <script src="script.js"></script>
 </body>
 
-</html>
+        </html>
