--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' style="https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09"></i>
+        <i class='bx bxl-twitter' style=""></i>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
-        <i class='bx bxl-youtube' style="https://youtube.com/@mubashirbhat2286?si=XsfGMiOBWUiZMKbF></i>
+        <i class='bx bxl-youtube' style=""></i>
             </div>
         </div>
-        <img src="https://i.postimg.cc/s21WRKWK/Snapchat-1606068077.jpg" alt="">
+        <img src="https://i.postimg.cc/YSbx6bKw/IMG-20240421-221411-309.jpg" alt="">
     </section>
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
         <h2 class="title">About <span>Me</span></h2>
-        <img src="https://i.postimg.cc/s21WRKWK/Snapchat-1606068077.jpg" alt="">
+        <img src="https://i.postimg.cc/YSbx6bKw/IMG-20240421-221411-309.jpg" alt="">
         <div class="text-content2">
             <h2>MUBII</h2>
     <p>I AM CRACKER, WEB DEVELOPER  ,APP MODDER . APART FROM THIS I AM A STUDENT AND CURRENTY STUDYING .
@@ -189,4 +189,4 @@
     <script src="script.js"></script>
 </body>
 
-        </html>
+</html>
