--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' style=""></i>
+        <i class='bx bxl-twitter' https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09="--vlr:7"></i>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
-        <i class='bx bxl-youtube' style=""></i>
+        <i class='bx bxl-youtube' style="--vlr:9"></i>
             </div>
         </div>
         <img src="https://i.postimg.cc/YSbx6bKw/IMG-20240421-221411-309.jpg" alt="">
@@ -48,8 +48,8 @@
         <img src="https://i.postimg.cc/YSbx6bKw/IMG-20240421-221411-309.jpg" alt="">
         <div class="text-content2">
             <h2>MUBII</h2>
-    <p>I AM CRACKER, WEB DEVELOPER  ,APP MODDER . APART FROM THIS I AM A STUDENT AND CURRENTY STUDYING .
-    .</p>
+    <p>I AM CRACKER, WEB DEVELOPER  , CODDER . APART FROM THIS I AM A STUDENT.
+    </p>
             <button class="btn">Read More</button>
         </div>
     </section>
@@ -71,7 +71,7 @@
                         <div class="content">
         <div class="year">2023-24 <i class='bx bxs-calendar'></i></div>
                             <h3>SENIOR SECONDARY</h3>
-    <p>I HAVE SUCCESSFULLY COMPLETED MY 12TH EXAMINATION WITH FLYING COLORS</p>
+    <p>I HAVE SUCCESSFULLY COMPLETED MY 12TH CLASS WITH FLYING COLORS</p>
                         </div>
                     </div>
                     <div class="education-content">
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="column">
-                <h2>WORK</h2>
+                <h2>ADDRESS</h2>
                 <div class="box">
                     <div class="education-content">
     <div class="content">
