--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <div class="text-animation">
                 <h2>Student , Developer & Cracker</h2>
             </div>
-    <p>HELLO WELCOME TO MY PROFILE . I AM A STUDENT , CRACKER , WEB DEVELOPER  , APP MODDER . I ALSO HAVE MANY SKILLS WHICH WILL BE VISIBLE BELOW . THANKS FOR VISITING MY PROFILE ❤️ .</p>
+    <p>HELLO WELCOME TO MY PROFILE . I AM A STUDENT , CRACKER , WEB DEVELOPER  , APP MODDER . THANKS FOR VISITING MY PROFILE ❤️ .</p>
             <div class="btn-section">
                 <button class="btn">Hire me</button>
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09="--vlr:7"></i>
+        <i class='bx bxl-twitter' style="--vlr:7"></i>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
         <i class='bx bxl-youtube' style="--vlr:9"></i>
             </div>
@@ -48,9 +48,10 @@
         <img src="https://i.postimg.cc/YSbx6bKw/IMG-20240421-221411-309.jpg" alt="">
         <div class="text-content2">
             <h2>MUBII</h2>
-    <p>I AM CRACKER, WEB DEVELOPER  , CODDER . APART FROM THIS I AM A STUDENT.
+    <p>HEY I'M MUBASHIR FROM KASHMIR.
+    I HAVE SO MANY SKILLS LIKE CODING, WEB DEVELOPING , CRACKING ETCC . APART FROM THIS I AM A STUDENT.
     </p>
-            <button class="btn">Read More</button>
+            <button class="btn">Read More< keep scroll>
         </div>
     </section>
     <!-- *************************Education Section************************* -->
@@ -97,7 +98,7 @@
                     <div class="education-content">
                         <div class="content">
                 <div class="year">2000-2030 <i class='bx bxs-calendar'></i></div>
-                            <h3>COMIMG SOON</h3>
+                            <h3>COMMING SOON</h3>
         <p </p>
                         </div>
                     </div>
@@ -189,4 +190,4 @@
     <script src="script.js"></script>
 </body>
 
-</html>
+            </html>
