--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <button class="btn">Hire me</button>
                 <button class="btn">Let's Talk</button>
             </div>
-            <div class="https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09=">
-        <i class='bx bxl-twitter' style="--vlr:7"></i>
+            <div class="social media">
+        <i class='bx bxl-twitter' style="--vlr:7"><https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09=>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
         <i class='bx bxl-youtube' style="--vlr:9"></i>
             </div>
@@ -51,7 +51,7 @@
     <p>HEY I'M MUBASHIR FROM KASHMIR.
     I HAVE SO MANY SKILLS LIKE CODING, WEB DEVELOPING , CRACKING ETCC . APART FROM THIS I AM A STUDENT.
     </p>
-            <button class="btn">Keep Scrolling>
+            <button class="btn">Keep Scrolling ⬇️
         </div>
     </section>
     <!-- *************************Education Section************************* -->
@@ -190,4 +190,4 @@
     <script src="script.js"></script>
 </body>
 
-</html>
+        </html>
