--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
                 <button class="btn">Hire me</button>
                 <button class="btn">Let's Talk</button>
             </div>
-            <div class="social media">
-        <i class='bx bxl-twitter' style="--vlr:7"><https://x.com/BhatMubashirr?t=lLb2LiPnuMDZKhjXaIpeww&s=09=>
+            <div class="social-media">
+        <i class='bx bxl-twitter' style="--vlr:7"></i>
         <i class='bx bxl-facebook' style="--vlr:8"></i>
         <i class='bx bxl-youtube' style="--vlr:9"></i>
             </div>
         </div>
-        <img src="https://i.postimg.cc/YSbx6bKw/IMG-20240421-221411-309.jpg" alt="">
+        <img src="https://i.postimg.cc/0QHnRgSc/IMG-20240211-093143-946.jpg" alt="">
     </section>
     <!-- *************************About Section************************* -->
     <section class="about" id="about">
         <h2 class="title">About <span>Me</span></h2>
-        <img src="https://i.postimg.cc/YSbx6bKw/IMG-20240421-221411-309.jpg" alt="">
+        <img src="https://i.postimg.cc/0QHnRgSc/IMG-20240211-093143-946.jpg" alt="">
         <div class="text-content2">
             <h2>MUBII</h2>
     <p>HEY I'M MUBASHIR FROM KASHMIR.
@@ -190,4 +190,4 @@
     <script src="script.js"></script>
 </body>
 
-        </html>
+</html>
