--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 <button class="btn">Let's Talk</button>
             </div>
             <div class="social-media">
-        <i class='bx bxl-twitter' style="--vlr:7"></i>
-        <i class='bx bxl-facebook' style="--vlr:8"></i>
-        <i class='bx bxl-youtube' style="--vlr:9"></i>
+      <a href="https://x.com/BhatMubashirr?t=ARf4hSSjYyCY3tDBwc3gmg&s=09" style="text-decoration: none;"> <i class='bx bxl-twitter'></i> </a>
+       
+      <a href="https://www.instagram.com/mubashirbhat._?igsh=MWMxbjhtdTlycWl0OQ==" style="text-decoration: none"><i class='bx bxl-instagram' style="--vlr:8"></i></a>  
+      <a href="https://youtube.com/@mubashirbhat2286?si=8PdG2cYkKa-qGMxI" style="text-decoration: none;" > <i class='bx bxl-youtube' style="--vlr:9"></i> </a> 
             </div>
         </div>
         <img src="https://i.postimg.cc/0QHnRgSc/IMG-20240211-093143-946.jpg" alt="">
@@ -51,7 +52,7 @@
     <p>HEY I'M MUBASHIR FROM KASHMIR.
     I HAVE SO MANY SKILLS LIKE CODING, WEB DEVELOPING , CRACKING ETCC . APART FROM THIS I AM A STUDENT.
     </p>
-            <button class="btn">Keep Scrolling ⬇️
+            <button class="btn">For More info Keep Scrolling ⬇️
         </div>
     </section>
     <!-- *************************Education Section************************* -->
@@ -65,20 +66,20 @@
                         <div class="content">
     <div class="year">2020-21<i class='bx bxs-calendar'></i></div>
     <h3>MATRICULATION</h3>
-    <p>I HAVE COMPLETED MY 10TH STANDARD WITH 100 PERCENCT MARKS 💀. </p>
+    <p>I HAVE COMPLETED MY 10TH STANDARD WITH GOOD PERCENTAGE ALHAMDULILLAH.</p>
                         </div>
                     </div>
                     <div class="education-content">
                         <div class="content">
         <div class="year">2023-24 <i class='bx bxs-calendar'></i></div>
                             <h3>SENIOR SECONDARY</h3>
-    <p>I HAVE SUCCESSFULLY COMPLETED MY 12TH CLASS WITH FLYING COLORS</p>
+    <p>I HAVE SUCCESSFULLY COMPLETED MY 12TH CLASS WITH GOOD MARKS</p>
                         </div>
                     </div>
                     <div class="education-content">
     <div class="content">
         <div class="year">2023-24 <i class='bx bxs-calendar'></i></div>
-        <h3>currently preparing for neet 🤧</h3>
+        <h3>CURRENTLY PREPARING FOR NEET 🤧</h3>
         <p></p>
     </div>
                     </div>
@@ -91,7 +92,7 @@
     <div class="content">
         <div class="year">📍<i class='bx bxs-calendar'></i></div>
         <h3>I'M FROM </h3>
-        <p>SOPORE KASHMIR 🗾</p>
+        <p>KASHMIR 🗾</p>
     </div>
 </div>
                 
@@ -128,7 +129,7 @@
                         <div class="bar bar-2"></div>
                     </div>
                     <div class="single-skill">
-                        <span class="topic">JavaScript</span>
+                        <span class="topic">JAVASCRIPT</span>
                         <span class="topic">70%</span>
                     </div>
                     <div class="bar-side">
@@ -140,14 +141,14 @@
                 <h3 class="skill-title">OTHER</h3>
                 <div class="skill-box skill-box2">
                     <div class="single-skill">
-                        <span class="topic">CRACKING</span>
+                        <span class"topic">CRACKING</span>
                         <span class="topic">90%</span>
                     </div>
                     <div class="bar-side">
                         <div class="bar bar-1"></div>
                     </div>
                     <div class="single-skill">
-                        <span class="topic"MODDING</span>
+                        <span class="topic">MODDING</span>
                         <span class="topic">80%</span>
                     </div>
                     <div class="bar-side">
@@ -167,16 +168,17 @@
     <!-- *************************Contact Section************************* -->
     <section class="contact" id="contact">
         <h2 class="title">Contact<span>Me</span></h2>
-        <form action="#" id="">
+        <form action="https://api.web3forms.com/submit" method="POST">
+          <input type="hidden" name="access_key" value="bf6c3dfb-7022-488f-8109-b603c02b2169">
             <div class="input-box">
-    <input type="text" required placeholder="Full Name">
-    <input type="email" required placeholder="Email">
+    <input type="text" name="Name" required placeholder="Full Name">
+    <input type="email" name="Email" required placeholder="Email">
             </div>
             <div class="input-box">
-    <input type="tel" required placeholder="Mobile Number">
-    <input type="email" required placeholder="Subject For">
+    <input type="tel" name="Number" required placeholder="Mobile Number">
+    <input type="text" name="Subject" required placeholder="Subject For">
             </div>
-    <textarea name="" id="" cols="30" rows="10" placeholder="Message" required></textarea>
+    <textarea name="Meaasage" id="" cols="30" rows="10" placeholder="Message" required></textarea>
     <input type="submit" value="Send Message" class="btn">
         </form>
 
@@ -190,4 +192,4 @@
     <script src="script.js"></script>
 </body>
 
-</html>
+    </html>
